# rpki-platform

./: .editorconfig  .gitignore  Makefile  README.md  企业级_RPKI网络安全管理平台_功能需求文档_V0.2.docx
backend/: .env.example  Dockerfile  README.md  _create_tables.py  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  0001_initial.py  0002_auth_models.py  0003_asset_models.py  0004_rpki_models.py  0005_bgp_models.py  0006_detection_models.py  0007_roa_change_models.py  0008_benign_conflict_models.py  0009_rtr_models.py  0010_api_key_models.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: clickhouse.py  config.py  database.py  default_rules.py  device_templates.py  encryption.py  field_encryption.py  identity_providers.py  init_data.py  kafka.py  key_rotation.py  logging.py  prefix_tree.py  rbac.py  redis.py  rpki_validator.py  rtr_protocol.py  rtr_server.py  sample_data.py  security.py
backend/app/middleware/: __init__.py  audit.py  ip_whitelist.py  rate_limit.py
backend/app/models/: __init__.py  api_key.py  api_security.py  asn.py  audit.py  base.py  benign_conflict.py  bgp.py  bgp_peer.py  business.py  detection.py  forensics.py  integration.py  prefix.py  roa_change.py  rpki.py  rtr.py  tenant.py  user.py
backend/app/schemas/: __init__.py  api_key.py  asn.py  asset.py  audit.py  auth.py  benign_conflict.py  bgp.py  bgp_peer.py  dashboard.py  detection.py  forensics.py  integration.py  prefix.py  roa.py  roa_change.py  rov.py  rpki.py  rtr.py  tenant.py
backend/app/services/: __init__.py  alert_service.py  anomaly_detection_service.py  anycast_service.py  api_key_service.py  asn_service.py  asset_service.py  audit_service.py  auth_service.py  benign_conflict_service.py  bgp_collector_service.py  bgp_parser.py  bgp_peer_service.py  bgp_storage_service.py  bmp_collector.py  crypto_service.py  dashboard_service.py  device_adapter_service.py  device_config_service.py  event_publisher.py  forensic_service.py  forensics_service.py  incident_review_service.py  incident_service.py  integration_config_service.py  key_rotation_service.py  maintenance_service.py  notification_service.py  prefix_service.py  real_data_collector.py  remediation_service.py  ripe_ris_collector.py  ripestat_client.py  roa_approval_service.py  roa_change_impact_service.py  roa_change_service.py  roa_service.py  roa_validation_service.py  routeviews_collector.py  rov_simulation_service.py  (+9 more)
backend/scripts/: __init__.py  init_sample_data.py
backend/scripts/perf/: run_perf_tests.sh
backend/scripts/security/: Dockerfile.scan  generate_sbom.sh  lint.sh  requirements-security.txt  run_sast.sh  scan_dependencies.sh  scan_image.sh
backend/tests/: conftest.py  test_detection.py  test_health.py  test_prefix_tree.py  test_rbac.py  test_roa_approval.py  test_rov_simulation.py  test_rtr_service.py  test_security.py  test_vrp_validation.py
(+156 files in other folders)
