[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpki-platform-backend"
version = "0.1.0"
description = "RPKI 网络安全管理平台后端"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "RPKI Platform Team" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "kafka-python>=2.0.2",
    "clickhouse-connect>=0.7.0",
    "pandas>=2.2.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/your-org/rpki-software"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Ruff 配置
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # 行长度由 black 处理
    "B008",  # FastAPI 依赖注入常用函数调用作为默认值
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/env.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# Black 配置
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | alembic/versions
)/
'''

# Mypy 配置
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
plugins = ["pydantic.mypy"]

# 对第三方库放宽类型检查
[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "kafka.*",
    "clickhouse_connect.*",
    "jose.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Pytest 配置
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
